[package]
name = "super-match"
version = "0.1.0"
authors = ["Teakowa Gatanothor O'deorain <hub+git@teakowa.dev>"]
edition = "2018"

repository = "https://github.com/UnionMusic/super-match"
readme = "README.md"
license = "Apache-2.0/Anti-996"
exclude = [".git*", "CODEOWNERS", "LICENSE*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.12.0"
actix-web = "3"
actix-http="2"
calamine="0.18.0"
dotenv="0.15.0"
env_logger="0.9.0"
failure="0.1.8"
futures = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.91"
serde_json = "1.0.64"
lazy_static="1.4.0"
log="0.4"
validator = "0.14.0"
validator_derive = "0.14.0"

[dev-dependencies]
actix-rt = "2.2.0"
